--- a/Mr_Barber/backend/.env
+++ b/Mr_Barber/backend/.env
@@ -5,6 +5,6 @@ FRONTEND_URL = http://localhost:5173
 EMAIL_HOST = sandbox.smtp.mailtrap.io
 EMAIL_PORT = 2525
 EMAIL_USER = 7de69c666c6eae
-EMIAL_PASS = 440bb2200cb6a7
+EMAIL_PASS = 440bb2200cb6a7
 
 JWT_SECRET = jwt_secret_key
